test/unstable/tertiary/tertiary-import-nontype.good
tertiary-import-nontype.chpl:14: error: Bad identifier, no known 'doWeirdThing' defined in 'M3'
